<?xml version="1.0"?>
<package format="2">
  <name>jsk_to_vision_msgs</name>
  <version>0.0.0</version>
  <description>The jsk_to_vision_msgs package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>vision_info_server</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>jsk_recognition_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>vision_info_server</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>vision_info_server</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
